--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "one-liner-joke": "^1.2.2",
+    "react": "^18.2.0",
     "readline": "^1.3.0",
     "shelljs": "^0.8.5",
     "socket.io": "^4.5.1",
@@ -40,7 +41,6 @@
     "superagent": "^7.1.3",
     "wait-on": "^6.0.1"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/negative-zero-inft/minusshell.git"
