--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "one-liner-joke": "^1.2.2",
     "react": "^18.2.0",
     "readline": "^1.3.0",
+    "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
